Added further login functionality and CRUD operations

--- a/FrontEnd/styles.css
+++ b/FrontEnd/styles.css
@@ -30,7 +30,7 @@ html {
     min-height: 100vh;
     overflow: hidden;
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url(img/titleist.webp);
+    url(img/background2.jpeg);
 }
 
 
